--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,21 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
+			<version>3.0.4.RELEASE</version>
+		</dependency>
+		<dependency>
+        	<groupId>org.springframework.social</groupId>
+        	<artifactId>spring-social-core</artifactId>
+        	<version>1.1.6.RELEASE</version>
+    	</dependency>
+    	<dependency>
+        	<groupId>org.springframework.social</groupId>
+        	<artifactId>spring-social-facebook</artifactId>
+        	<version>2.0.3.RELEASE</version>
+    	</dependency>
 	</dependencies>
 
 	<build>
