--- a/pom.xml
+++ b/pom.xml
@@ -69,15 +69,19 @@
 			<version>3.0.4.RELEASE</version>
 		</dependency>
 		<dependency>
-        	<groupId>org.springframework.social</groupId>
-        	<artifactId>spring-social-core</artifactId>
-        	<version>1.1.6.RELEASE</version>
-    	</dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		</dependency>
     	<dependency>
-        	<groupId>org.springframework.social</groupId>
-        	<artifactId>spring-social-facebook</artifactId>
-        	<version>2.0.3.RELEASE</version>
-    	</dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.6</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-mail</artifactId>
+	    </dependency>
 	</dependencies>
 
 	<build>
