--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
-
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
+spring.datasource.url=jdbc:mariadb://localhost:3306/testdb
+spring.datasource.username=root
+spring.datasource.password=maqa-337-DY
+spring.datasource.initialization-mode=always
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
-spring.data.rest.basePath=/api
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
+spring.data.rest.basePath=/api
