Switched from h2 to MariaDB. Fixed issues with the map. Started fixing reCAPTCHA. Added file upload, working on file upload problems.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,13 @@ spring.datasource.password=maqa-337-DY
 spring.datasource.initialization-mode=always
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.data.rest.basePath=/api
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
+upload.path=
