--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mariadb://localhost:3306/testdb
 spring.datasource.username=root
-spring.datasource.password=maqa-337-DY
+spring.datasource.password={your-password}
 spring.datasource.initialization-mode=always
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.generate-ddl=true
